css fix remove white-space:wrap

--- a/app/styles/core.css
+++ b/app/styles/core.css
@@ -68,3 +68,6 @@ border-bottom: 1px solid #ddd;
 	border-radius: 50px;
 	border: 1px solid rgb(179, 179, 179);
 }
+.item, .item p {
+	white-space: normal;
+}
